--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,19 @@
     "manifest_version": 2,
     "name": "My first Chrome Extension",
     "description": "Chrome extension workshop for Le Wagon Tokyo",
-    "author": "Your name",
+    "author": "Dan Chin",
     "version": "1",
     "permissions": ["tabs"],
+    "content_scripts": [
+      {
+        "matches": [
+          "<all_urls>"
+        ],
+        "js": [
+          "scripts/cheesify.js"
+        ]
+      }
+    ],
     "icons": {
       "16": "images/icon16.png",
       "32": "images/icon32.png",
